chandeliers-lus/tests/compile_fail/ui/clk/merge.stderr
error: This expression is too slow: expected the implicit clock 'self, found 'when b
 --> tests/compile_fail/ui/clk/merge.rs:5:23
  |
5 |         i = if b then x when b else y whenot b;
  |                       ^^^^^^^^
  |
note: Found 'when b here
 --> tests/compile_fail/ui/clk/merge.rs:5:30
  |
5 |         i = if b then x when b else y whenot b;
  |                              ^
note: Expected because this expression moves at the implicit pace
 --> tests/compile_fail/ui/clk/merge.rs:5:16
  |
5 |         i = if b then x when b else y whenot b;
  |                ^
